# rica

./: .gitattributes  .gitignore  CONTRIBUTING.md  DEPLOY.md  LICENSE  README.md  SECURITY.md  _sidebar.md  architecture.md  commands.md  config.yaml.example  configuration.md  dashboard.md  deployment.md  getting-started.md  index.html  install.ps1  install.sh  installation.md  pyproject.toml  troubleshooting.md  verification.md
bot/: .env.example  __init__.py  config.py  errors.py  executor.py  main.py  prompts.py  rate_limiter.py  requirements.txt  reset_db.py  sessions.py  text_sanitizer.py
bot/creative/: __init__.py  imagen.py  lyria.py  veo.py
bot/memory/: __init__.py  user_memory.py
bot/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  google_ai.py  groq_provider.py  minimax_provider.py  openai_provider.py  openrouter.py
bot/storage/: __init__.py  encryption.py  firestore_client.py  gcs_client.py  local_db.py  local_files.py  markdown_hooks.py  markdown_kb.py
bot/tests/: test_errors.py  test_executor.py  test_executor_context_env.py  test_main_helpers.py  test_markdown_kb.py  test_providers.py  test_rate_limiter.py  test_sessions.py  test_text_sanitizer.py  test_user_memory.py
bot/workers/: __init__.py  agent.py  db_manager.py  moderator.py  responder.py
cli/: __init__.py  main.py  onboard.py
dashboard/: __init__.py
dashboard/api/: .env.example  __init__.py  main.py  requirements.txt
dashboard/api/routes/: auth.py  data.py  keys.py  servers.py  stats.py
dashboard/web/: package-lock.json  package.json
dashboard/web/src/app/: globals.css  layout.tsx  page.tsx
dashboard/web/src/app/auth/callback/: page.tsx
dashboard/web/src/app/dashboard/: page.tsx
dashboard/web/src/app/dashboard/[serverId]/: layout.tsx  page.tsx
dashboard/web/src/app/dashboard/[serverId]/agents/: page.tsx
dashboard/web/src/app/dashboard/[serverId]/channels/: page.tsx
dashboard/web/src/app/dashboard/[serverId]/creative/: page.tsx
dashboard/web/src/app/dashboard/[serverId]/data/: page.tsx
dashboard/web/src/app/dashboard/[serverId]/errors/: page.tsx
dashboard/web/src/app/dashboard/[serverId]/keys/: page.tsx
dashboard/web/src/app/dashboard/[serverId]/search/: page.tsx
dashboard/web/src/app/dashboard/[serverId]/setup/: page.tsx
dashboard/web/src/app/dashboard/[serverId]/usage/: page.tsx
dashboard/web/src/app/dashboard/[serverId]/workers/: page.tsx
dashboard/web/src/components/: Dropdown.tsx
dashboard/web/src/lib/: api.ts
